2005-09-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-replace-part)
	(gnus-mime-replace-part): New functions.
	(gnus-mime-action-alist, gnus-mime-button-commands)
	(gnus-mime-save-part-and-strip): Added file argument.
	(gnus-article-part-wrapper): Added interactive argument.

	* gnus-sum.el (gnus-summary-mime-map): Add
	`gnus-article-replace-part'.

2005-09-19  Didier Verna  <didier@xemacs.org>

	The nnml compaction feature:
	* nnml.el (nnml-request-compact-group): New function.
	* nnml.el (nnml-request-compact): New function.
	* gnus-int.el (gnus-request-compact-group): New function.
	* gnus-int.el (gnus-request-compact): New function.
	* gnus-group.el (gnus-group-compact-group): New function.
	* gnus-group.el (gnus-group-group-map): Bind it to 'G z'.
	* gnus-group.el (gnus-group-make-menu-bar): Add an entry for it.
	* gnus-srvr.el (gnus-server-compact-server): New function.
	* gnus-srvr.el (gnus-server-mode-map): Bind it to 'z'.
	* gnus-srvr.el (gnus-server-make-menu-bar): Add an entry for it.

2005-09-18  D Goel  <deego@gnufans.org>

	* sieve.el (sieve-help): Fix `message' call: first arg should be a
	format spec.

2005-09-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-group-startup-message): Bind image-load-path.

2005-09-15  Romain Francoise  <romain@orebokech.com>

	* message.el (message-fill-paragraph): Clarify docstring.

2005-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-display-part): Protect against broken
	MIME messages.

2005-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-edit-article-done): Remove text props
	before parsing header.

2005-09-11  Jari Aalto  <jari.aalto@cante.net>

	* html2text.el: (html2text-replace-list): Add new entities.

2005-09-11  Romain Francoise  <romain@orebokech.com>

	* message.el (message-alternative-emails): Improve docstring.
	(message-setup-1): Call `message-use-alternative-email-as-from'